Fixed layout issues

--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
-body { background: grey; }
+body {
+    background: grey;
+}
+
+svg {
+    width:90%;
+    height:90%;
+    min-width:600px;
+    min-height:400px;
+    position:absolute;
+    top:5%;
+    left:5%;
+    z-index:-1;
+}
